Just getting barebones up and running

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ cache:
 
 
 before_install:
-  - ./.travis/install-ndk.sh
+  # - ./.travis/install-ndk.sh
   - ./.travis/install-fuse.sh
 
 # http://stackoverflow.com/questions/27671854/travis-ci-fails-to-build-with-a-code-signing-error
