--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,7 @@ env:
     - NDK_VERSION=r10e
     - FUSE_VERSION=0.12.3.6348
     - UNOPROJ=TravisTest
-language: 
-  - fuse
-  - objective-c
-  - android
+language: android
 android:
   components:
     # Uncomment the lines below if you want to
