--- a/.travis.yml
+++ b/.travis.yml
@@ -3,28 +3,7 @@ env:
     - NDK_VERSION=r10e
     - FUSE_VERSION=0.12.3.6348
     - UNOPROJ=TravisTest
-language: android
-android:
-  components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    - platform-tools
-    # - tools
-
-    # The BuildTools version used by your project
-    - build-tools-19.1.0
-    - build-tools-23.0.1
-
-    # The SDK version used to compile your project
-    - android-19
-    - android-21
-    - android-23
-
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - addon-google_apis-google-19
+language: objective-c
 os:
   - osx
 sudo: required
