Adding caching of ndk

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ cache:
     - /Applications/Fuse.app
     - /usr/local/share/uno
     - $HOME/fuse
+    - $HOME/Library/Android/sdk/ndk-bundle
 
 
 before_install:
