--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ env:
     - NDK_VERSION=r10e
     - FUSE_VERSION=0.12.3.6348
     - UNOPROJ=TravisTest
-    - APPSUPPORT="/Users/travis/Library/Application Support/Fusetools/"
 language: 
   - fuse
   - objective-c
@@ -18,7 +17,8 @@ cache:
     - /usr/local/share/uno
     - $HOME/.fuse
     - $HOME/Library/Android/sdk/ndk-bundle
-    - $APPSUPPORT
+    - $HOME/fuse
+
 
 before_install:
   - ./.travis/install-ndk.sh
@@ -29,3 +29,7 @@ before_install:
 #     - ./.travis/add-key.sh
 
 script: ./.travis/test.sh
+
+before_cache:
+  - mkdir $HOME/fuse
+  - mv "/Users/travis/Library/Application Support/Fusetools" $HOME/fuse/appsupport
