--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ sudo: required
 
 cache:
   directories:
-    - /Applications/Fuse.app
-    - /usr/local/share/uno
-    - $HOME/.fuse
+#    - /Applications/Fuse.app
+#    - /usr/local/share/uno
+#    - $HOME/.fuse
     - $HOME/Library/Android/sdk/ndk-bundle
-    - $HOME/fuse
+#    - $HOME/fuse
 
 
 before_install:
