--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ cache:
 
 
 before_install:
-  # - ./.travis/install-ndk.sh
-  # - ./.travis/install-fuse.sh
-  # - ./.travis/install-fuseandroid.sh
+  - ./.travis/install-ndk.sh
+  - ./.travis/install-fuse.sh
+  - ./.travis/install-fuseandroid.sh
 
 # http://stackoverflow.com/questions/27671854/travis-ci-fails-to-build-with-a-code-signing-error
 # before_script:
@@ -31,8 +31,8 @@ before_install:
 
 script: 
   - ./.travis/test_uno.sh
-  # - ./.travis/test_ios.sh
-  # - ./.travis/test_android.sh
+  - ./.travis/test_ios.sh
+  - ./.travis/test_android.sh
 
 before_cache:
   - mkdir $HOME/fuse
